# ToyEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
Sandbox/src/shaders/: triangle.frag  triangle.vert
ToyEngine/: CMakeLists.txt
ToyEngine/src/: ToyEngine.hpp  tepch.hpp
ToyEngine/src/ToyEngine/: Application.hpp  EntryPoint.hpp
ToyEngine/src/ToyEngine/Core/: Application.cpp  Application.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Timestep.hpp  Window.cpp  Window.hpp
ToyEngine/src/ToyEngine/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp  WindowEvents.hpp
ToyEngine/src/ToyEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
ToyEngine/src/ToyEngine/Renderer/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Helpers.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
